Set height for slider img on mobile Fix bug with loader

--- a/src/components/modals/OnboardingModal/OnboardingModal.module.less
+++ b/src/components/modals/OnboardingModal/OnboardingModal.module.less
@@ -1,3 +1,5 @@
+@animation-duration: 0.3s;
+
 .loaderWrapper {
   position: absolute;
   width: 100%;
@@ -8,6 +10,14 @@
   justify-content: center;
   align-items: center;
   z-index: 1;
+
+  animation: hideLoader @animation-duration ease-out forwards;
+}
+
+@keyframes hideLoader {
+  to {
+    display: none;
+  }
 }
 
 .modalContent {
@@ -18,7 +28,7 @@
     margin: -16px;
   }
 
-  animation: 0.3s linear modalAppear;
+  animation: @animation-duration linear modalAppear;
 
   :global {
     .slick-dots li button {
@@ -100,6 +110,10 @@
   height: 300px;
   object-fit: contain;
   background: var(--bg-secondary);
+
+  @media screen and (max-width: 640px) {
+    height: 184px;
+  }
 }
 
 .slideText {
